// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrudRequestInterceptor should be provided: getMany() 1`] = `
Array [
  Object {
    "body": "quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto",
    "id": 1,
    "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
    "userId": 1,
  },
  Object {
    "body": "est rerum tempore vitae sequi sint nihil reprehenderit dolor beatae ea dolores neque fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis qui aperiam non debitis possimus qui neque nisi nulla",
    "id": 2,
    "title": "qui est esse",
    "userId": 1,
  },
  Object {
    "body": "et iusto sed quo iure voluptatem occaecati omnis eligendi aut ad voluptatem doloribus vel accusantium quis pariatur molestiae porro eius odio et labore et velit aut",
    "id": 3,
    "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
    "userId": 1,
  },
]
`;

exports[`CrudRequestInterceptor should be provided: getOne(1) 1`] = `
Object {
  "body": "quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto",
  "id": 1,
  "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
  "userId": 1,
}
`;

exports[`CrudRequestInterceptor should be provided: getOne(2) 1`] = `
Object {
  "body": "est rerum tempore vitae sequi sint nihil reprehenderit dolor beatae ea dolores neque fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis qui aperiam non debitis possimus qui neque nisi nulla",
  "id": 2,
  "title": "qui est esse",
  "userId": 1,
}
`;

exports[`CrudRequestInterceptor should be provided: patch(1) 1`] = `
Object {
  "body": "asdf",
  "title": "asdf",
}
`;

exports[`CrudRequestInterceptor should be provided: post(1) 1`] = `
Object {
  "body": "asdf",
  "title": "asdf",
}
`;
